...
          context.read<EventListBloc>().add(const EventListDelegateConsumed());
        }
      },
      builder: (context, state) {
        return Scaffold(
          appBar: AppBar(
            title: const Text('イベント一覧'),
            centerTitle: true,
            actions: [
              IconButton(
                key: const Key('event_list_invite_code_button'),
                icon: const Icon(Icons.card_membership),
                tooltip: '招待コードで参加',
...
